--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,19 @@
 .vscode/
 
 tail/
+
+*.log
+*.pot
+*.pyc
+__pycache__/
+local_settings.py
+db.sqlite3
+media
+
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
